--- a/index.html
+++ b/index.html
@@ -15,16 +15,6 @@
             <h3 class="contact-info__sub-header">Full-Stack Developer</h3>
 
             <div class="contact_info_container fh">
-              <div class="contact-info__block"></div>
-
-              <div class="contact-info__block contact-info__block--center">
-                <img
-                  class="contact-info__avatar"
-                  src="assets/avatar.png"
-                  alt="Avatar"
-                />
-              </div>
-
               <div class="contact-info__block">
                 <a href="" rel="author" class="contact-info__item">
                   <div class="contact-info__item-icon-wrapper">
@@ -35,15 +25,25 @@
                     >
                       <path
                         d="M172.268 501.67C26.97 291.031 0 269.413 0 192 0 85.961 85.961 0
-        192 0s192 85.961 192 192c0 77.413-26.97 99.031-172.268 309.67-9.535
-        13.774-29.93 13.773-39.464 0zM192 272c44.183 0 80-35.817
-        80-80s-35.817-80-80-80-80 35.817-80 80 35.817 80 80 80z"
+                                192 0s192 85.961 192 192c0 77.413-26.97 99.031-172.268 309.67-9.535
+                                13.774-29.93 13.773-39.464 0zM192 272c44.183 0 80-35.817
+                                80-80s-35.817-80-80-80-80 35.817-80 80 35.817 80 80 80z"
                       ></path>
                     </svg>
                   </div>
                   <span>Lviv, Ukraine</span>
                 </a>
+              </div>
 
+              <div class="contact-info__block contact-info__block--center">
+                <img
+                  class="contact-info__avatar"
+                  src="assets/avatar.png"
+                  alt="Avatar"
+                />
+              </div>
+
+              <div class="contact-info__block">
                 <a
                   href="https://ua.linkedin.com/company/binary-studio_241166"
                   rel="author"
