Update contact info and profile photo

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <div class="resume">
         <div class="container">
           <div class="resume__block">
-            <h1 class="contact-info__header">John Doe</h1>
+            <h1 class="contact-info__header">Edwar Martinez</h1>
             <h3 class="contact-info__sub-header">Full-Stack Developer</h3>
 
             <div class="contact_info_container fh">
@@ -31,21 +31,21 @@
                       ></path>
                     </svg>
                   </div>
-                  <span>Lviv, Ukraine</span>
+                  <span>La Paz, Bolivia</span>
                 </a>
               </div>
 
               <div class="contact-info__block contact-info__block--center">
                 <img
                   class="contact-info__avatar"
-                  src="assets/avatar.png"
+                  src="assets/avatar.webp"
                   alt="Avatar"
                 />
               </div>
 
               <div class="contact-info__block">
                 <a
-                  href="https://ua.linkedin.com/company/binary-studio_241166"
+                  href="https://www.linkedin.com/in/edwar-martinez-vale-605291224"
                   rel="author"
                   class="contact-info__item"
                 >
@@ -66,7 +66,7 @@
                       ></path>
                     </svg>
                   </div>
-                  <span>binary-studio</span>
+                  <span>Edwar Martinez</span>
                 </a>
               </div>
             </div>
