Update intro text

--- a/index.html
+++ b/index.html
@@ -94,10 +94,16 @@
                 </svg>
               </div>
               <p class="intro_text">
-                I'm John, a software developer driven by innovation and
-                problem-solving. With a strong background in computer science,
-                I'm dedicated to pushing boundaries and crafting elegant
-                solutions through code.
+                Hello! I’m Edwar, a passionate and experienced software
+                developer with a knack for creating innovative and efficient
+                solutions. With a strong background in Angular, TypeScript,
+                HTML, CSS, Python, Express.js, PostgreSQL, I specialize in
+                developing scalable applications and enhancing user experiences.
+                My journey in the tech world has equipped me with a keen eye for
+                detail, a problem-solving mindset, and a dedication to
+                continuous learning. Whether I’m collaborating with a team or
+                tackling solo projects, I strive to deliver high-quality code
+                and impactful results.
               </p>
             </div>
           </div>
