Update skills text

--- a/index.html
+++ b/index.html
@@ -114,7 +114,10 @@
             <div class="skills">
               <h3 class="skills__header">Skills</h3>
               <p class="skills__text">
-                Problem solving, Continuous Learning, Team Collaboration
+                Problem solving, Continuous Learning, Team Collaboration,
+                Patience, Honesty, Attention to detail, Active listening,
+                Decision making, Cooperation, Perseverance, Curiosity,
+                Communication, Adaptability.
               </p>
             </div>
           </div>
