--- a/index.html
+++ b/index.html
@@ -131,22 +131,62 @@
                 <div class="experiences__company">
                   <div class="experiences__company-header">
                     <span class="experiences__company-header-durability"
-                      >2005-Present</span
+                      >2023-Present</span
                     >
-                    <h3 class="experiences__company-header-name">
-                      Binary Studio
-                    </h3>
+                    <h3 class="experiences__company-header-name">Bupunku</h3>
                   </div>
 
                   <div class="experiences__company-project">
                     <span class="experiences__company-project-role"
-                      >Full-Stack Developer</span
+                      >Frontend Developer</span
                     >
                     <h3 class="experiences__company-project-name">
-                      Binary Studio Website
+                      Fleet Management System
                     </h3>
                     <ul class="experiences__company-project-responsibilities">
-                      <li>Backend Architecture</li>
+                      <li>Backend Developement</li>
+                      <li>Frontend Development</li>
+                      <li>API Integration</li>
+                      <li>Code Maintenance</li>
+                    </ul>
+                  </div>
+
+                  <div class="experiences__company-project">
+                    <span class="experiences__company-project-role"
+                      >Frontend Developer</span
+                    >
+                    <h3 class="experiences__company-project-name">
+                      HMI System
+                    </h3>
+                    <ul class="experiences__company-project-responsibilities">
+                      <li>Frontend Development</li>
+                      <li>API Integration</li>
+                      <li>Code Maintenance</li>
+                    </ul>
+                  </div>
+
+                  <div class="experiences__company-project">
+                    <span class="experiences__company-project-role"
+                      >Frontend Developer</span
+                    >
+                    <h3 class="experiences__company-project-name">
+                      Bupunku Learning Platform
+                    </h3>
+                    <ul class="experiences__company-project-responsibilities">
+                      <li>Frontend Development</li>
+                      <li>API Integration</li>
+                      <li>Code Maintenance</li>
+                    </ul>
+                  </div>
+
+                  <div class="experiences__company-project">
+                    <span class="experiences__company-project-role"
+                      >Frontend Developer</span
+                    >
+                    <h3 class="experiences__company-project-name">
+                      Dashboard Of Energy Consumption
+                    </h3>
+                    <ul class="experiences__company-project-responsibilities">
                       <li>Frontend Development</li>
                       <li>API Integration</li>
                       <li>Code Maintenance</li>
