Update education info

--- a/index.html
+++ b/index.html
@@ -202,15 +202,15 @@
                     <span
                       class="additional-info__education-university-durability"
                     >
-                      2021
+                      2022
                     </span>
                     <h3
                       class="additional-info__education-university-speciality"
                     >
-                      Full-Stack Development
+                      Computer Science
                     </h3>
                     <p class="additional-info__education-university-name">
-                      Binary Studio Academy
+                      Universidad Autónoma Juan Misael Saracho
                     </p>
                   </div>
                 </div>
