--- a/index.html
+++ b/index.html
@@ -217,8 +217,8 @@
 
                 <div class="additional-info__languages">
                   <h3 class="additional-info__languages-header">Languages</h3>
+                  <p class="additional-info__languages-item">Spanish</p>
                   <p class="additional-info__languages-item">English</p>
-                  <p class="additional-info__languages-item">Ukrainian</p>
                 </div>
               </div>
             </div>
