--- a/index.html
+++ b/index.html
@@ -224,6 +224,45 @@
             </div>
           </div>
         </div>
+
+        <div class="container">
+          <div class="resume__block">
+            <div class="intro">
+              <div class="intro__icon-wrapper">
+                <svg
+                  class="intro__icon"
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 576 512"
+                >
+                  <path
+                    d="M9.4 86.6C-3.1 74.1-3.1 53.9 9.4 41.4s32.8-12.5 45.3 0l192 192c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L178.7 256 9.4 86.6zM256 416H544c17.7 0 32 14.3 32 32s-14.3 32-32 32H256c-17.7 0-32-14.3-32-32s14.3-32 32-32z"
+                  />
+                </svg>
+              </div>
+              <div>
+                <p class="intro_text">
+                  Talking about myself, I can tell you that I like to play
+                  videogames; my favorite one is Dota 2. 🎮
+                </p>
+                <p class="intro_text">
+                  I love music, and I like to know more about a country through
+                  their music. 🎵
+                </p>
+                <p class="intro_text">
+                  I prefer to use the keyboard as much as I can to surf the
+                  system, and because of that, I love Linux and Arch with a
+                  tiling window manager like dwm and neovim as my main editor
+                  along with tmux, and by now I'm trying to use a neovim GUI,
+                  which is neovide. I also would like to mention that my
+                  favorite font is PragmataPro; you definitely should keep an
+                  eye on it. I also like to use tui apps (terminal user
+                  interfaces), and one of my favorites is Lazygit. In fact I'm
+                  almost a nerd of terminal. 🤓
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </main>
   </body>
