--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Résumé</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="assets/css/styles.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
   <body>
@@ -56,7 +56,7 @@
               <div class="contact-info__block contact-info__block--center">
                 <img
                   class="contact-info__avatar"
-                  src="assets/avatar.webp"
+                  src="assets/images/avatar.webp"
                   alt="Avatar"
                 />
               </div>
@@ -284,6 +284,6 @@
       </div>
     </main>
 
-    <script defer src="index.js"></script>
+    <script defer src="assets/js/main.js"></script>
   </body>
 </html>
