--- a/index.html
+++ b/index.html
@@ -88,6 +88,13 @@
                 </a>
               </div>
             </div>
+
+            <video autoplay loop muted playsinline id="llama">
+              <source
+                src="assets/videos/llama-running.webm"
+                type="video/webm"
+              />
+            </video>
           </div>
         </div>
 
@@ -284,6 +291,7 @@
       </div>
     </main>
 
+    <script defer src="assets/js/anime.min.js"></script>
     <script defer src="assets/js/main.js"></script>
   </body>
 </html>
